@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-13T00:59:40Z",
+  "timestamp" : "2025-12-18T01:00:27Z",
   "count_outdated" : 124,
   "uniques_outdated" : 106,
-  "count" : 128,
-  "uniques" : 110,
+  "count" : 129,
+  "uniques" : 111,
   "clones" : [
     {
       "timestamp": "2025-12-04T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-12-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
