@@ -1,6 +1,6 @@
 {
-  "count": 4,
-  "uniques": 4,
+  "count": 5,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2025-12-04T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2025-12-12T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-12-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
